# d

./: 13  666  daaaaaa  dsadasdasd  l4  lab1  lab2  lab3  laba5.slnx  laba6  laba7  polovina 6
build-untitled4-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_carddialog.h  ui_mainwindow.h
build-untitled4-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/debug/: moc_carddialog.cpp  moc_mainwindow.cpp  moc_predefs.h  qrc_Resources.cpp
build-untitled4-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/images/: Новый текстовый документ.txt
laba5/laba5/: laba5.cpp  laba5.vcxproj
laba5/laba5/x64/Debug/: laba5.exe.recipe  laba5.ilk  vc145.idb
laba5/laba5/x64/Debug/laba5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  laba5.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
laba66/: laba66.slnx
laba66/laba66/: laba66.cpp  laba66.vcxproj  laba66.vcxproj.filters
laba66/laba66/x64/Debug/: laba66.exe.recipe  laba66.ilk  laba66.obj.enc  vc145.idb
laba66/laba66/x64/Debug/laba66.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  laba66.lastbuildstate  (+4 more)
untitled11/: CMakeLists.txt  lesson.cpp  lesson.h  mainwindow.cpp  mainwindow.h
untitled15555/: lesson.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
untitled155556/: CMakeLists.txt  lesson.h  mainwindow.cpp  mainwindow.ui
untitled4/: Resources.qrc  carddialog.cpp  carddialog.h  carddialog.ui  magp.cpp  magp.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  person.h  untitled4.pro  vragp.cpp  vragp.h
